<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rv_cats"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:listitem="@layout/item_cat"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:itemCount="6"

...
